# search-engine

./: .gitignore  README.md  pyproject.toml
data/: products.xlsx
src/search_engine/: main.py
src/search_engine/config/: settings.py
src/search_engine/data/: __init__.py
src/search_engine/data/loading/: local.py
src/search_engine/data/preprocessing/: __init__.py  product_description.py  utils.py
src/search_engine/models/: __init__.py  interface.py  tf_idf.py
streamlit/: search_engine_demo.py  utils.py
